# DeepThought

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  currPlan.md  docker-compose.yml  manualTesting.md  plan.md  pyproject.toml  skills.md  v2FeaturePlan.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  server.py
backend/documentation/: chainVsGraph.md
backend/scripts/: seed_data.py  setup_dynamodb.py  setup_pinecone.py
backend/src/deepthought/: __init__.py
backend/tests/integration/: test_api_flow.py  test_calendar_flow.py  test_todos_flow.py
backend/tests/unit/: __init__.py  test_calendar.py  test_llm_provider.py  test_models.py  test_stats.py  test_todos.py
documentation/: originalPlan.md
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/contexts/: auth-context.tsx
frontend/src/hooks/: use-operations.ts  use-pairs.ts
frontend/src/lib/: api.ts  types.ts
scripts/: seed_data.py  setup_ollama.py
src/deepthought/agents/: __init__.py  graph.py  state.py
src/deepthought/api/: __init__.py  app.py  auth.py  dependencies.py
src/deepthought/config/: __init__.py  settings.py
src/deepthought/core/: __init__.py  exceptions.py
src/deepthought/db/: __init__.py  client.py
src/deepthought/llm/: __init__.py  provider.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: test_auth.py  test_llm_provider.py  test_math_ops.py  test_models.py  test_nodes.py  test_pairs.py  test_tools.py
(+74 files in other folders)
