[project]
name = "deepthought"
version = "0.1.0"
description = "AI-powered multi-agent calculation service using FastAPI and LangGraph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.0.40",
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "boto3-stubs[dynamodb]>=1.34.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepthought"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "aioboto3.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_anthropic.*",
    "langchain_ollama.*",
    "langchain_google_genai.*",
    "langgraph.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
